# BackendFastAPI

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/api/: nutrition.py  users.py
src/db/: nutrition.py  users_db.py
src/domain/: user_repo.py  users.py
src/tutorial-env/: pyvenv.cfg
