[tool.poetry]
authors = ["Syneto LigaAC Lab Dark Side"]
description = "An API gateway, uvicorn + fastapi"
name = "syneto-lab-dark-side"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.95.0"
python = "^3.11"
uvicorn = "^0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]